--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <title>Account-a-Goals</title>
-    <link rel="icon" href="./public/images/dart_64.png" type="image/png" />
+    <link rel="icon" href="/images/dart_64.png" type="image/png" />
   </head>
   <body>
     <noscript>
